--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hazdev-template": "~0.2.4",
     "hazdev-webutils": "~0.1.8",
     "ini": "^1.2.1",
+    "leaflet": "^1.0.0",
     "mocha": "^2.1.0",
     "postcss-calc": "^5.0.0",
     "postcss-import": "^7.1.0",
