--- a/.jshintrc
+++ b/.jshintrc
@@ -1,18 +1,19 @@
 {
-	"bitwise": true,
-	"curly": true,
-	"eqeqeq": true,
-	"esnext": true,
-	"immed": true,
-	"latedef": true,
-	"newcap": false,
-	"noarg": true,
-	"quotmark": "single",
-	"undef": true,
-	"unused": true,
-	"strict": true,
-	"trailing": true,
+  "bitwise": true,
+  "curly": true,
+  "eqeqeq": true,
+  "immed": true,
+  "latedef": true,
+  "newcap": false,
+  "noarg": true,
+  "quotmark": "single",
+  "undef": true,
+  "unused": true,
+  "strict": true,
+  "trailing": true,
 
-	"browser": true,
-	"node": true
+  "smarttabs": true,
+
+  "browser": true,
+  "node": true
 }
