add moment, leaflet-label

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "hazdev-webutils": "~0.1.8",
     "ini": "^1.2.1",
     "leaflet": "^1.0.0",
+    "leaflet.label": "git+ssh://git@github.com:jmfee-usgs/Leaflet.label.git#external-leaflet",
     "mocha": "^2.1.0",
+    "moment": "^2.15.1",
     "postcss-calc": "^5.0.0",
     "postcss-import": "^7.1.0",
     "precss": "^1.3.0",
