--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ini": "^1.2.1",
     "leaflet": "^0.7.7",
     "leaflet.label": "git+ssh://git@github.com:jmfee-usgs/Leaflet.label.git#external-leaflet",
+    "manup": "^1.0.1",
     "mocha": "^2.1.0",
     "moment": "^2.15.1",
     "postcss-calc": "^5.0.0",
