--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "postcss-import": "^7.1.0",
     "precss": "^1.3.0",
     "sinon": "^1.17.1",
-    "tablesort": "^4.1.0"
+    "tablesort": "shaefner-usgs/tablesort"
   },
   "engines": {
     "node": ">=0.10.0"
