--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "manup": "^1.0.1",
     "mocha": "^2.1.0",
     "moment": "^2.15.1",
+    "plotly.js": "^1.29.1",
     "postcss-calc": "^5.0.0",
     "postcss-import": "^7.1.0",
     "precss": "^1.3.0",
