--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "license": "CC0-1.0",
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
+    "autoprefixer": "^8.1.0",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "chai": "^3.4.0",
     "compression": "^1.6.0",
-    "cssnano": "^3.3.1",
+    "cssnano": "^3.10.0",
     "gateway": "^1.0.0",
     "glob": "^7.0.3",
     "grunt": "^0.4.5",
@@ -34,7 +34,7 @@
     "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-phantomjs": "3.0.0",
-    "grunt-postcss": "^0.7.0",
+    "grunt-postcss": "^0.9.0",
     "hazdev-template": "~0.2.4",
     "hazdev-webutils": "~0.1.8",
     "ini": "^1.2.1",
@@ -42,9 +42,10 @@
     "manup": "^1.0.1",
     "mocha": "^2.1.0",
     "moment": "^2.15.1",
-    "postcss-calc": "^5.0.0",
-    "postcss-import": "^7.1.0",
-    "precss": "^1.3.0",
+    "postcss-advanced-variables": "^2.3.3",
+    "postcss-calc": "^6.0.1",
+    "postcss-import": "^11.1.0",
+    "precss": "^3.1.2",
     "sinon": "^1.17.1",
     "tablesort": "shaefner-usgs/tablesort"
   },
