--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.15.1",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-calc": "^6.0.1",
+    "postcss-color-function": "^4.0.1",
     "postcss-import": "^11.1.0",
     "precss": "^3.1.2",
     "sinon": "^1.17.1",
