--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-.DS_Store
+# Compiled output
 .build
-.nova
 dist
-node_modules
-*.sublime-workspace
+
+# Configuration
 src/conf/config.ini*
 src/conf/httpd.conf
+
+# Dependencies
+node_modules
+
+# IDEs and editors
+*.sublime-workspace
+.nova
+
+# System files
+.DS_Store
+Thumbs.db
