--- a/package.json
+++ b/package.json
@@ -1,55 +1,53 @@
 {
   "name": "esc-response-app",
-  "version": "0.1.0",
-  "description": "Earthquake Response app to assist with writing talking points.",
+  "version": "0.7.0",
+  "description": "Web application that creates an interactive map, plots and summary for an earthquake to help collect and digest information used in talking points and scientific response.",
+  "keywords": [
+    "usgs",
+    "earthquake"
+  ],
+  "author": "Scott Haefner",
+  "license": "CC0-1.0",
+  "main": "src/htdocs/js/index.js",
+  "scripts": {
+    "build": "grunt build",
+    "dist": "grunt dist",
+    "run": "grunt",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/shaefner-usgs/esc-response-app.git"
   },
-  "keywords": [
-    "usgs"
-  ],
-  "scripts": {
-    "test": "grunt test"
+  "engines": {
+    "node": ">=10"
   },
-  "license": "CC0-1.0",
-  "dependencies": {},
-  "devDependencies": {
-    "autoprefixer": "^8.1.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babelify": "^7.3.0",
-    "chai": "^3.4.0",
-    "compression": "^1.6.0",
-    "cssnano": "^3.10.0",
-    "gateway": "^1.0.0",
-    "glob": "^7.0.3",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-connect-proxy": "^0.2.0",
-    "grunt-connect-rewrite": "^0.2.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-phantomjs": "3.0.0",
-    "grunt-postcss": "^0.9.0",
-    "hazdev-webutils": "~0.2.0",
-    "ini": "^1.2.1",
-    "leaflet": "^1.5.1",
-    "manup": "^1.0.1",
-    "mocha": "^2.1.0",
+  "dependencies": {
+    "leaflet": "^1.7.1",
     "moment": "^2.15.1",
-    "postcss-advanced-variables": "^2.3.3",
-    "postcss-calc": "^6.0.1",
-    "postcss-color-function": "^4.0.1",
-    "postcss-import": "^11.1.0",
-    "precss": "^3.1.2",
-    "sinon": "^1.17.1",
     "tablesort": "shaefner-usgs/tablesort"
   },
-  "engines": {
-    "node": ">=0.10.0"
+  "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@lodder/grunt-postcss": "^3.0.0",
+    "autoprefixer": "^10.2.4",
+    "babelify": "^10.0.0",
+    "cssnano": "^4.1.10",
+    "grunt": "^1.3.0",
+    "grunt-browserify": "^6.0.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^23.0.0",
+    "grunt-sass": "^3.1.0",
+    "hazdev-webutils": "~0.2.0",
+    "http-rewrite-middleware": "^0.1.6",
+    "ini": "^2.0.0",
+    "load-grunt-tasks": "^5.1.0",
+    "postcss": "^8.2.6",
+    "sass": "^1.32.8"
   }
 }
