--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "grunt build",
     "dist": "grunt dist",
-    "run": "grunt",
+    "watch": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.2.4",
     "babelify": "^10.0.0",
     "cssnano": "^4.1.10",
+    "eslint-summary": "^1.0.0",
     "grunt": "^1.3.0",
     "grunt-browserify": "^6.0.0",
     "grunt-contrib-clean": "^2.0.0",
