--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "leaflet": "^1.7.1",
     "moment": "^2.15.1",
+    "plotly.js": "^1.58.4",
     "tablesort": "shaefner-usgs/tablesort"
   },
   "devDependencies": {
