--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "leaflet": "^1.7.1",
     "moment": "^2.15.1",
     "plotly.js": "^1.58.4",
-    "tablesort": "shaefner-usgs/tablesort"
+    "tablesort": "shaefner-usgs/tablesort",
+    "utfgrid": "danzel/Leaflet.utfgrid"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
