--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.13.9",
     "@lodder/grunt-postcss": "^3.0.0",
     "autoprefixer": "^10.2.4",
