--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "leaflet": "^1.7.1",
-    "moment": "^2.15.1",
+    "luxon": "^2.0.1",
     "plotly.js": "^1.58.4",
     "tablesort": "shaefner-usgs/tablesort",
     "utfgrid": "danzel/Leaflet.utfgrid"
