--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "node": ">=10"
   },
   "dependencies": {
+    "flatpickr": "^4.6.9",
     "leaflet": "^1.7.1",
+    "leaflet-editable": "^1.2.0",
+    "leaflet.path.drag": "^0.0.6",
     "luxon": "^2.0.1",
     "plotly.js": "^1.58.4",
     "tablesort": "shaefner-usgs/tablesort",
