--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flatpickr": "4.6.9",
     "leaflet": "^1.7.1",
     "leaflet-editable": "^1.2.0",
+    "leaflet-mouse-position": "shaefner-usgs/Leaflet.MousePosition",
     "leaflet.path.drag": "^0.0.6",
     "luxon": "^2.3.1",
     "plotly.js": "^2.10.1",
